# pronote-mcp

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/pronote_mcp/: __init__.py  client.py  ent.py  formatters.py  logging_setup.py  server.py  server_http.py  tools.py
